--- a/praditya.html
+++ b/praditya.html
@@ -1,1 +1,17 @@
-praditya aldi syahputra
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+    <img src="https://picsum.photos/200" alt="gambar random">
+    <h1>praditya aldi syahputra</h1>
+</body>
+
+</html>
