update salma page

--- a/salma.html
+++ b/salma.html
@@ -1,1 +1,17 @@
-salma
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <img src="https://picsum.photo/200" alt="gambar random">
+    <h1>luthfiatiwi rona khoirusalma</h1>
+</body>
+
+</html>
