--- a/banal.html
+++ b/banal.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
-    <h1>banal majda</h1>
+    <img src="https://picsum.photos/200" alt="gambar random">
+    <h1> Moh Banal majda</h1>
 </body>
 
 </html>
