--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
     <h1>Hello World</h1>
+    <ul>
+        <li>
+            <a href="./banal.html">Banal majda</a>
+        </li>
+    </ul>
 </body>
 
 </html>
