--- a/index.html
+++ b/index.html
@@ -12,5 +12,12 @@
 <body>
     <h1>Hello World</h1>
 </body>
+<h1>Hello Wordld</h1>
+
+<ul>
+    <li>
+        <a href="./salma.html">Salma</a>
+    </li>
+</ul>
 
 </html>
