add test for conflict merge purpose

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <li>
             <a href="./banal.html">Banal majda</a>
         </li>
+        <li>
+            <a href="./test.html">test</a>
+        </li>
     </ul>
 </body>
 
